Added oauth_reg, oauth_login, oauth_logout
