# openapi/auth.yaml
@@ -28,8 +28,86 @@ paths:
       responses:
         201:
           description: "You registered successfully"
+        400:
+          description: "User already exists"
       x-swagger-router-controller: "app.api.v1.registration"
-
+  /register/{provider}:
+    get:
+      tags:
+        - "Oauth Registration"
+      summary: "You can register here via social networks"
+      operationId: register_oauth
+      parameters:
+        - name: "provider"
+          in: "path"
+          description: "Person to register via social networks"
+          required: true
+          type: "string"
+      responses:
+        308:
+          description: "You will be redirected"
+      x-swagger-router-controller: "app.api.v1.registration"
+  /authorize:
+    get:
+      tags:
+        - "Oauth Registration"
+      summary: "You can register here via social networks"
+      operationId: registerauthorize
+      responses:
+        201:
+          description: "You registered successfully"
+        400:
+          description: "User already exists"
+      x-swagger-router-controller: "app.api.v1.registration"
+  /login/{provider}:
+    get:
+      tags:
+        - "Oauth Log In"
+      summary: "You can log in here via social networks"
+      operationId: login
+      parameters:
+        - name: "provider"
+          in: "path"
+          description: "Person to login via social networks"
+          required: true
+          type: "string"
+      responses:
+        308:
+          description: "You will be redirected"
+      x-swagger-router-controller: "app.api.v1.registration"
+  /loginauthorize:
+    get:
+      tags:
+        - "Oauth Log In"
+      summary: "You can log in here via social networks"
+      operationId: loginauthorize
+      responses:
+        201:
+          description: "You logged in successfully"
+        400:
+          description: "No such user"
+      x-swagger-router-controller: "app.api.v1.registration"
+  /logout:
+    get:
+      tags:
+        - "Log Out"
+      summary: "You can log out here"
+      operationId: logout_oauth
+      responses:
+        200:
+          description: "You logged out"
+      x-swagger-router-controller: "app.api.v1.registration"
+  /index:
+    get:
+      tags:
+        - "smth"
+      summary: "smth"
+      operationId: main_func
+      responses:
+        200:
+          description: "lol"
+      x-swagger-router-controller: "app.api.v1.registration"
+  
 definitions:
   Person:
     type: "object"
@@ -53,6 +131,7 @@ definitions:
         format: "email"
       password:
         type: "string"
+        format: "password"
     example:
       first_name: "Ivan"
       second_name: "Ivanov"
